feat: Build the navigation menu.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,33 @@
           </p>
         </div>
       </section>
+      <section id="section4" data-nav="Section 4">
+        <div class="landing__container">
+          <h2>Section 4</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit id
+            asperiores ea ut ab fuga accusamus sint fugiat nostrum neque commodi
+            quo vitae omnis, corrupti totam iste autem assumenda voluptas soluta
+            odio odit beatae! Sint officia earum ducimus quis molestias hic
+            rerum a eveniet, omnis ex numquam voluptas minima blanditiis, magni,
+            totam quidem. Necessitatibus laboriosam ipsum sequi tempore.
+            Possimus hic, ullam corporis quaerat consectetur inventore commodi
+            incidunt tempora! Nulla ratione sequi sapiente. Voluptate porro
+            perferendis quisquam in unde doloremque eaque culpa beatae ducimus
+            natus adipisci tenetur voluptatibus, voluptatem omnis neque nihil,
+            at mollitia? Provident ipsam odio consequatur voluptatem vel
+            ratione.
+          </p>
+
+          <p>
+            Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar
+            gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam.
+            Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum
+            consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget
+            elementum tortor mollis non.
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="page__footer">
       <p>&copy Udacity</p>
