feat: add new section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,35 @@
           </p>
         </div>
       </section>
+      <section id="section5" data-nav="Section 5">
+        <div class="landing__container">
+          <h2>Section 5</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum totam
+            praesentium eveniet officiis. Omnis at quam blanditiis eos quia hic
+            fugit vero quibusdam molestiae consectetur aut tempore nostrum,
+            ipsum iure voluptatibus, voluptate, quisquam dolorem! In excepturi
+            porro quibusdam mollitia ea omnis quia, exercitationem dolorem
+            blanditiis voluptatum, quisquam perspiciatis quaerat corrupti ipsum
+            esse error quod tenetur maiores, consequatur tempore voluptas
+            laudantium! Hic dolor maiores aliquam iste nam temporibus sit fugiat
+            veniam quaerat est repellendus, architecto quo, provident labore,
+            deserunt natus ipsum at inventore fuga ex tempora autem dolore? Odio
+            voluptatibus at ad, praesentium magni dolor eos eveniet
+            reprehenderit itaque animi? Veniam at ratione eos laudantium, eaque
+            quaerat ullam omnis provident excepturi cumque. Deserunt labore quo
+            est repellat aut aliquam ab atque.
+          </p>
+
+          <p>
+            Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar
+            gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam.
+            Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum
+            consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget
+            elementum tortor mollis non.
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="page__footer">
       <p>&copy Udacity</p>
