feat: add scroll to top button

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         </div>
       </section>
     </main>
+    <button id="scrollToTopBtn">☝️</button>
     <footer class="page__footer">
       <p>&copy Udacity</p>
     </footer>
